--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
     "require-dev": {
         "phpunit/phpunit": "^8.1@dev"
     },
+    "autoload": {
+        "psr-4": {
+            "Obiefy\\LaravelDropdown\\": "src"
+        }
+    },
     "license": "MIT",
     "minimum-stability": "dev"
 }
